feat(pkger): add pgker http server to the api handler
